Main:4280 test_acc 97.7 || dig_test acc 80.6

--- a/capsnet_tf.ipynb
+++ b/capsnet_tf.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "capsnet tf.ipynb",
+      "name": "capsnet_tf.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -53,25 +53,7 @@
         "# %cd 'MY Projects'\n",
         "# %cd 'EEE lop'\n",
         "# %cd 'tensorflow_implementation'\n",
-        "# !ls\n",
-        "# # %cd data\n",
-        "# # %cd \"Kannada_MNIST_datataset_paper\"\n",
-        "# # %cd \"Kannada_MNIST_Ubyte_gz/Kannada_MNIST\""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rQICWKCDMdT6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "# # !gunzip *-ubyte.gz\n",
-        "# %cd .."
+        "# !ls\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -114,7 +96,6 @@
       },
       "source": [
         "def load_mnist_kannada(batch_size, is_training=True):\n",
-        "    path = os.path.join('data', 'mnist')\n",
         "    if is_training:\n",
         "        fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Kannada_MNIST/X_kannada_MNIST_train-idx3-ubyte')\n",
         "        loaded = np.fromfile(file=fd, dtype=np.uint8)\n",
@@ -135,15 +116,28 @@
         "\n",
         "        return trX, trY, num_tr_batch, valX, valY, num_val_batch\n",
         "    else:\n",
-        "        fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Kannada_MNIST/X_kannada_MNIST_test-idx3-ubyte')\n",
+        "        \n",
+        "        # test on 60K dataset\n",
+        "        #fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Kannada_MNIST/X_kannada_MNIST_test-idx3-ubyte')\n",
+        "        \n",
+        "        # test on DIG 10K \n",
+        "        fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Dig_MNIST/X_dig_MNIST-idx3-ubyte.gz (Unzipped Files)/X_dig_MNIST-idx3-ubyte')\n",
+        "        \n",
         "        loaded = np.fromfile(file=fd, dtype=np.uint8)\n",
-        "        teX = loaded[16:].reshape((10000, 28, 28, 1)).astype(np.float)\n",
+        "        n_test_img = ((len(loaded)-16))//(28*28)\n",
         "\n",
-        "        fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Kannada_MNIST/y_kannada_MNIST_test-idx1-ubyte')\n",
+        "        teX = loaded[16:].reshape((n_test_img, 28, 28, 1)).astype(np.float)\n",
+        "        \n",
+        "        # test on 60K\n",
+        "        #fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Kannada_MNIST/y_kannada_MNIST_test-idx1-ubyte')\n",
+        "        \n",
+        "        # test on 10K\n",
+        "        fd = open('/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation/data/Kannada_MNIST_datataset_paper/Kannada_MNIST_Ubyte_gz/Dig_MNIST/y_dig_MNIST-idx1-ubyte.gz (Unzipped Files)/y_dig_MNIST-idx1-ubyte')\n",
+        "        \n",
         "        loaded = np.fromfile(file=fd, dtype=np.uint8)\n",
-        "        teY = loaded[8:].reshape((10000)).astype(np.int32)\n",
+        "        teY = loaded[8:].reshape((n_test_img)).astype(np.int32)\n",
         "\n",
-        "        num_te_batch = 10000 // batch_size\n",
+        "        num_te_batch = n_test_img // batch_size\n",
         "        return teX / 255., teY, num_te_batch\n",
         "\n",
         "\n",
@@ -580,6 +574,27 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F2c47XQtVjMW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# # Delete All flags before running\n",
+        "\n",
+        "# def del_all_flags(FLAGS):\n",
+        "#     flags_dict = FLAGS._flags()    \n",
+        "#     keys_list = [keys for keys in flags_dict]    \n",
+        "#     for keys in keys_list:\n",
+        "#         FLAGS.__delattr__(keys)\n",
+        "\n",
+        "# del_all_flags(tf.flags.FLAGS)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3gdsP4XjooMy",
@@ -765,8 +780,8 @@
         "        test_acc = test_acc / (cfg.batch_size * num_te_batch)\n",
         "        fd_test_acc.write(str(test_acc))\n",
         "        fd_test_acc.close()\n",
-        "        print('Test Accuracy is {}:'.format(test_acc))\n",
-        "        print('Test accuracy has been saved to ' + cfg.results + '/test_acc.csv')\n",
+        "        print('\\nTest Accuracy is {}:'.format(test_acc))\n",
+        "        print('\\nTest accuracy has been saved to ' + cfg.results + '/test_acc_Dig_10K.csv')\n",
         "        \n",
         "\n",
         "\n"
@@ -788,23 +803,29 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oKoYiZzjaohA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Main function"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "tsFwtN0aqZZ5",
         "colab_type": "code",
-        "outputId": "daf13cb3-f7c4-48c2-dbfa-fa30dbe38450",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 381
-        }
+        "colab": {}
       },
       "source": [
         "def main(_):\n",
-        "    tf.logging.info(' Loading Graph...')\n",
+        "    # tf.logging.info(' Loading Graph...')\n",
         "    num_label = 10\n",
         "    model = CapsNet()\n",
-        "    tf.logging.info(' Graph loaded')\n",
-        "    tf.logging.set_verbosity(tf.logging.INFO)\n",
+        "    # tf.logging.info(' Graph loaded')\n",
+        "    # tf.logging.set_verbosity(tf.logging.INFO)\n",
         "\n",
         "\n",
         "    sv = tf.train.Supervisor(graph=model.graph, logdir=cfg.logdir, save_model_secs=0)\n",
@@ -815,60 +836,19 @@
         "        tf.logging.info('Training done')\n",
         "    else:\n",
         "        evaluation(model, sv, num_label)\n",
+        "    \n",
+        "    print(\"Success !!\")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    tf.app.run()\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "I0903 18:54:22.941385 140316784076672 <ipython-input-38-fda5935e9628>:2]  Loading Graph...\n",
-            "I0903 18:54:24.588011 140316784076672 <ipython-input-32-4752a8a30df1>:46] Seting up the main structure\n",
-            "I0903 18:54:24.589272 140316784076672 <ipython-input-38-fda5935e9628>:5]  Graph loaded\n",
-            "I0903 18:54:25.099312 140316784076672 saver.py:1280] Restoring parameters from logdir/model_epoch_0008_step_3860\n",
-            "I0903 18:54:25.421833 140316784076672 session_manager.py:500] Running local_init_op.\n",
-            "I0903 18:54:25.449097 140316784076672 session_manager.py:502] Done running local_init_op.\n",
-            "I0903 18:55:00.822681 140316784076672 supervisor.py:737] Starting standard services.\n",
-            "I0903 18:55:01.741322 140316784076672 supervisor.py:743] Starting queue runners.\n",
-            "I0903 18:55:02.577968 140316784076672 saver.py:1280] Restoring parameters from logdir/model_epoch_0008_step_3860\n",
-            "I0903 18:55:04.262516 140316784076672 <ipython-input-36-21c4e262bb7d>:91] Model restored!\n",
-            "I0903 18:55:15.712376 140313637578496 supervisor.py:1050] Recording summary at step 3861.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Test Accuracy is 0.9772636217948718:\n",
-            "Test accuracy has been saved to results/test_acc.csv\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "SystemExit",
-          "evalue": "ignored",
-          "traceback": [
-            "An exception has occurred, use %tb to see the full traceback.\n",
-            "\u001b[0;31mSystemExit\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2890: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-            "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YmZCjnaESjo4",
+        "id": "3VyZrCsOzwiV",
         "colab_type": "code",
         "colab": {}
       },
