Code update || Main:4280 test_acc 97.7 || dig_test acc 80.6

--- a/capsnet_tf.ipynb
+++ b/capsnet_tf.ipynb
@@ -6,7 +6,6 @@
       "name": "capsnet_tf.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,39 +30,73 @@
       "metadata": {
         "id": "f5Ny1TiIq_Mk",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "50b84cea-abee-47d1-e1dd-16d9c61cbaa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount('/content/gdrive')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fad8N1QAq_Lk",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "cc6d6dd6-d63b-422c-c265-2705362b40ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
       },
       "source": [
-        "# %cd gdrive\n",
-        "# %cd 'My Drive'\n",
-        "# %cd 'MY Projects'\n",
-        "# %cd 'EEE lop'\n",
-        "# %cd 'tensorflow_implementation'\n",
-        "# !ls\n"
+        "%cd gdrive\n",
+        "%cd 'My Drive'\n",
+        "%cd 'MY Projects'\n",
+        "%cd 'EEE lop'\n",
+        "%cd 'tensorflow_implementation'\n",
+        "!ls\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/gdrive\n",
+            "/content/gdrive/My Drive\n",
+            "/content/gdrive/My Drive/MY Projects\n",
+            "/content/gdrive/My Drive/MY Projects/EEE lop\n",
+            "/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation\n",
+            "'capsnet tf.ipynb'   data     results\t\t  Try-1\n",
+            " capsnet_tf.py\t     logdir   tensorboard.ipynb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AcHekIQBo9Sm",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "087eecf5-e8de-4b98-c366-c102d2647222",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 63
+        }
       },
       "source": [
         "import os\n",
@@ -74,8 +107,27 @@
         "tf.logging.set_verbosity(tf.logging.INFO)\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -125,7 +177,6 @@
         "        \n",
         "        loaded = np.fromfile(file=fd, dtype=np.uint8)\n",
         "        n_test_img = ((len(loaded)-16))//(28*28)\n",
-        "\n",
         "        teX = loaded[16:].reshape((n_test_img, 28, 28, 1)).astype(np.float)\n",
         "        \n",
         "        # test on 60K\n",
@@ -627,9 +678,9 @@
         "flags.DEFINE_float('lambda_val', 0.5, 'down weight of the loss for absent digit classes')\n",
         "\n",
         "# for training\n",
-        "flags.DEFINE_integer('batch_size', 128, 'batch size')\n",
+        "flags.DEFINE_integer('batch_size', 32, 'batch size')\n",
         "flags.DEFINE_integer('epoch', 10, 'epoch')\n",
-        "flags.DEFINE_integer('iter_routing', 3, 'number of iterations in routing algorithm')\n",
+        "flags.DEFINE_integer('iter_routing', 5, 'number of iterations in routing algorithm')\n",
         "flags.DEFINE_boolean('mask_with_y', True, 'use the true label to mask out target capsule or not')\n",
         "\n",
         "flags.DEFINE_float('stddev', 0.01, 'stddev for W initializer')\n",
@@ -639,11 +690,10 @@
         "############################\n",
         "#   environment setting    #\n",
         "############################\n",
-        "flags.DEFINE_string('dataset', 'mnist', 'The name of dataset [mnist, fashion-mnist')\n",
         "flags.DEFINE_boolean('is_training', True, 'train or predict phase')\n",
         "flags.DEFINE_integer('num_threads', 8, 'number of threads of enqueueing examples')\n",
         "flags.DEFINE_string('logdir', 'logdir', 'logs directory')\n",
-        "flags.DEFINE_integer('train_sum_freq', 10, 'the frequency of saving train summary(step)')\n",
+        "flags.DEFINE_integer('train_sum_freq', 50, 'the frequency of saving train summary(step)')\n",
         "flags.DEFINE_integer('val_sum_freq', 500, 'the frequency of saving valuation summary(step)')\n",
         "flags.DEFINE_integer('save_freq', 3, 'the frequency of saving model(epoch)')\n",
         "flags.DEFINE_string('results', 'results', 'path for saving results')\n",
@@ -668,7 +718,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Main"
+        "# Main Helper functions"
       ]
     },
     {
@@ -781,23 +831,10 @@
         "        fd_test_acc.write(str(test_acc))\n",
         "        fd_test_acc.close()\n",
         "        print('\\nTest Accuracy is {}:'.format(test_acc))\n",
-        "        print('\\nTest accuracy has been saved to ' + cfg.results + '/test_acc_Dig_10K.csv')\n",
+        "        print('\\nTest accuracy has been saved to ' + cfg.results + '/test_acc')\n",
         "        \n",
         "\n",
         "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1Q1-M8ZsdZrs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "cfg.is_training=False"
       ],
       "execution_count": 0,
       "outputs": []
@@ -815,17 +852,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tsFwtN0aqZZ5",
+        "id": "dKlyEnFD0RP-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "cfg.is_training=False"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WwTLpHcJ0Q9f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 738
+        },
+        "outputId": "9b08cabe-64c9-4dfe-a0c2-b3c1f269e2e8"
+      },
+      "source": [
         "def main(_):\n",
-        "    # tf.logging.info(' Loading Graph...')\n",
+        "    tf.logging.info(' Loading Graph...')\n",
         "    num_label = 10\n",
         "    model = CapsNet()\n",
-        "    # tf.logging.info(' Graph loaded')\n",
-        "    # tf.logging.set_verbosity(tf.logging.INFO)\n",
+        "    tf.logging.info(' Graph loaded')\n",
+        "    tf.logging.set_verbosity(tf.logging.INFO)\n",
         "\n",
         "\n",
         "    sv = tf.train.Supervisor(graph=model.graph, logdir=cfg.logdir, save_model_secs=0)\n",
@@ -836,19 +890,226 @@
         "        tf.logging.info('Training done')\n",
         "    else:\n",
         "        evaluation(model, sv, num_label)\n",
-        "    \n",
-        "    print(\"Success !!\")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    tf.app.run()\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow: Loading Graph...\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:09:58.352348 140319578068864 <ipython-input-13-fda5935e9628>:2]  Loading Graph...\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Seting up the main structure\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:09:59.906388 140319578068864 <ipython-input-6-4752a8a30df1>:46] Seting up the main structure\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow: Graph loaded\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:09:59.909253 140319578068864 <ipython-input-13-fda5935e9628>:5]  Graph loaded\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Restoring parameters from logdir/model_epoch_0008_step_15461\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:00.385176 140319578068864 saver.py:1284] Restoring parameters from logdir/model_epoch_0008_step_15461\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/training/saver.py:1069: get_checkpoint_mtimes (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use standard file utilities to get mtimes.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W1101 08:10:00.714938 140319578068864 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/training/saver.py:1069: get_checkpoint_mtimes (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use standard file utilities to get mtimes.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Running local_init_op.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:00.727056 140319578068864 session_manager.py:500] Running local_init_op.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Done running local_init_op.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:00.756721 140319578068864 session_manager.py:502] Done running local_init_op.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Starting standard services.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:34.271227 140319578068864 supervisor.py:737] Starting standard services.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Starting queue runners.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:34.945167 140319578068864 supervisor.py:743] Starting queue runners.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Restoring parameters from logdir/model_epoch_0008_step_15461\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:34.976254 140319578068864 saver.py:1284] Restoring parameters from logdir/model_epoch_0008_step_15461\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Model restored!\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:36.736618 140319578068864 <ipython-input-9-c121f0c92096>:91] Model restored!\n",
+            "  7%|██▎                              | 23/320 [00:01<00:16, 17.95b/s]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Recording summary at step 15462.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I1101 08:10:38.249198 140316312876800 supervisor.py:1050] Recording summary at step 15462.\n",
+            "                                                                      "
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Test Accuracy is 0.80576171875:\n",
+            "\n",
+            "Test accuracy has been saved to results/test_acc\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\r"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "SystemExit",
+          "evalue": "ignored",
+          "traceback": [
+            "An exception has occurred, use %tb to see the full traceback.\n",
+            "\u001b[0;31mSystemExit\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2890: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+            "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3VyZrCsOzwiV",
+        "id": "spYdQXFr1UbZ",
         "colab_type": "code",
         "colab": {}
       },
