Updated || Main:4280 test_acc 97.7 || dig_test acc 80.5

--- a/capsnet_tf.ipynb
+++ b/capsnet_tf.ipynb
@@ -30,37 +30,21 @@
       "metadata": {
         "id": "f5Ny1TiIq_Mk",
         "colab_type": "code",
-        "outputId": "50b84cea-abee-47d1-e1dd-16d9c61cbaa1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fad8N1QAq_Lk",
         "colab_type": "code",
-        "outputId": "cc6d6dd6-d63b-422c-c265-2705362b40ee",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
+        "colab": {}
       },
       "source": [
         "%cd gdrive\n",
@@ -70,33 +54,15 @@
         "%cd 'tensorflow_implementation'\n",
         "!ls\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/gdrive\n",
-            "/content/gdrive/My Drive\n",
-            "/content/gdrive/My Drive/MY Projects\n",
-            "/content/gdrive/My Drive/MY Projects/EEE lop\n",
-            "/content/gdrive/My Drive/MY Projects/EEE lop/tensorflow_implementation\n",
-            "'capsnet tf.ipynb'   data     results\t\t  Try-1\n",
-            " capsnet_tf.py\t     logdir   tensorboard.ipynb\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AcHekIQBo9Sm",
         "colab_type": "code",
-        "outputId": "087eecf5-e8de-4b98-c366-c102d2647222",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 63
-        }
+        "colab": {}
       },
       "source": [
         "import os\n",
@@ -107,27 +73,8 @@
         "tf.logging.set_verbosity(tf.logging.INFO)\n",
         "\n"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<p style=\"color: red;\">\n",
-              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
-              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
-              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
-              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -867,11 +814,7 @@
       "metadata": {
         "id": "WwTLpHcJ0Q9f",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 738
-        },
-        "outputId": "9b08cabe-64c9-4dfe-a0c2-b3c1f269e2e8"
+        "colab": {}
       },
       "source": [
         "def main(_):\n",
@@ -894,217 +837,8 @@
         "if __name__ == \"__main__\":\n",
         "    tf.app.run()\n"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow: Loading Graph...\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:09:58.352348 140319578068864 <ipython-input-13-fda5935e9628>:2]  Loading Graph...\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Seting up the main structure\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:09:59.906388 140319578068864 <ipython-input-6-4752a8a30df1>:46] Seting up the main structure\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow: Graph loaded\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:09:59.909253 140319578068864 <ipython-input-13-fda5935e9628>:5]  Graph loaded\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Restoring parameters from logdir/model_epoch_0008_step_15461\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:00.385176 140319578068864 saver.py:1284] Restoring parameters from logdir/model_epoch_0008_step_15461\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/training/saver.py:1069: get_checkpoint_mtimes (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use standard file utilities to get mtimes.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W1101 08:10:00.714938 140319578068864 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/training/saver.py:1069: get_checkpoint_mtimes (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use standard file utilities to get mtimes.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Running local_init_op.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:00.727056 140319578068864 session_manager.py:500] Running local_init_op.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Done running local_init_op.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:00.756721 140319578068864 session_manager.py:502] Done running local_init_op.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Starting standard services.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:34.271227 140319578068864 supervisor.py:737] Starting standard services.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Starting queue runners.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:34.945167 140319578068864 supervisor.py:743] Starting queue runners.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Restoring parameters from logdir/model_epoch_0008_step_15461\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:34.976254 140319578068864 saver.py:1284] Restoring parameters from logdir/model_epoch_0008_step_15461\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Model restored!\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:36.736618 140319578068864 <ipython-input-9-c121f0c92096>:91] Model restored!\n",
-            "  7%|██▎                              | 23/320 [00:01<00:16, 17.95b/s]"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Recording summary at step 15462.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "I1101 08:10:38.249198 140316312876800 supervisor.py:1050] Recording summary at step 15462.\n",
-            "                                                                      "
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Test Accuracy is 0.80576171875:\n",
-            "\n",
-            "Test accuracy has been saved to results/test_acc\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\r"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "SystemExit",
-          "evalue": "ignored",
-          "traceback": [
-            "An exception has occurred, use %tb to see the full traceback.\n",
-            "\u001b[0;31mSystemExit\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2890: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-            "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
